--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,7 @@
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body,
@@ -54,19 +53,23 @@ select {
 
 body {
   font: 18px/20px Arial;
+  color: #fff;
+  background: #0e1538;
 }
 
 .container {
   width: 700px;
   margin: 20px auto;
 }
-
 .container p {
-  padding: 20px 5px 10px;
+  padding: 20px 10px;
+  margin: 30px 0;
+  border: 1px solid #ffc;
+  border-radius: 10px;
+  box-shadow: 0 0 15px 5px rgba(255, 255, 255, 0.5);
 }
-
 .container p:nth-child(odd) {
-  background: #c7f09f;
+  background: #173837;
 }
 
 .scroll-btn {
@@ -78,22 +81,16 @@ body {
   background: url("../images/arrow.svg") no-repeat center #bd7d07;
   background-size: 70%;
   border-radius: 50%;
-  -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5);
-          box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.5);
   opacity: 0;
-  -webkit-transform: translateY(70px);
-          transform: translateY(70px);
-  -webkit-transition: 0.3s;
+  transform: translateY(70px);
   transition: 0.3s;
   cursor: pointer;
 }
-
 .scroll-btn.active {
   opacity: 0.7;
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
+  transform: translateY(0);
 }
-
 .scroll-btn.active:hover {
   opacity: 1;
 }
@@ -103,6 +100,8 @@ body {
   left: 0;
   top: 0;
   height: 3px;
-  background: #bd7d07;
+  background: linear-gradient(to right, red, orange);
+  box-shadow: 0 2px 5px 3px rgba(0, 0, 0, 0.5);
 }
+
 /*# sourceMappingURL=style.css.map */
